# shape_drawer

./: CMakeLists.txt  LICENSE  README.md
include/: freetype_wrapper.h
include/basics/: amplify_angle.h  color.h  constants.h  point.h
include/drawer/: png_drawer.h  svg_drawer.h
include/shapes/: annulus.h  arc.h  arc_text.h  bezier.h  circle.h  line.h  line_text.h  rectangle.h  region.h  ribbon.h  tile.h
src/: freetype_wrapper.cpp
src/drawer/: png_drawer.cpp  svg_drawer.cpp
test/: flood_test.cpp  freetype_test.cpp  shape_test.h
